# secs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  secs-tests.yml  tests.yml
example/: CMakeLists.txt  basics.cpp  example.cpp
include/: secs.hpp
src/: CMakeLists.txt  secs.cpp
test/: CMakeLists.txt  entityManagerTest.cpp
test/Archetype/: CMakeLists.txt  archetypeComparison.test.cpp  archetypeTest.cpp  checkIfSubArchetype.test.cpp  checkIfSubarchetypeTest.cpp  setComponent.test.cpp
test/ComponentList/: CMakeLists.txt  componentList.test.cpp  componentListTest.cpp
test/ComponentManager/: CMakeLists.txt  componentManager.test.cpp  componentManagerTest.cpp
test/EntityManager/: CMakeLists.txt  CmakeLists.txt  archetypeManagement.test.cpp  entityArchetypeManagementTest.cpp  entityCreation.test.cpp  entityCreationTest.cpp  getEntities.test.cpp
test/SECS/: CMakeLists.txt  SECSComponentManagementTest.cpp  SECSEntityCreationTest.cpp  SECSSystemDependenciesTest.cpp  SECSSystemManagementTest.cpp  SECSSystemManagmentTest.cpp  entityToSystemMapping.test.cpp
test/SystemManager/: CMakeLists.txt  CmakeLists.txt  dependencyManagement.test.cpp  entityManagement.test.cpp  systemActivationTest.cpp  systemDependenciesManagementTest.cpp  systemEntityManagementTest.cpp
